<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.payment.PaymentsFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cronologia_pagamenti"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/dateTitle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/data"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/amountTitle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/importo"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/paymentTypeTitle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/metodo_di_pagamento"
                android:textColor="@color/black" />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPayment"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="15dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_pay"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/paga_ora"
            app:backgroundTint="#76a5a5"
            app:icon="@drawable/icon_pay"
            app:iconSize="22dp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
