<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="#d8ffff"
    android:minWidth="300dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iconActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/activityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="#a6d6d6"
            android:text="@string/activityname"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeleteReservation"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancella_prenotazione"
            app:backgroundTint="#76a5a5"
            app:icon="@drawable/baseline_delete_white_24dp" />
    </LinearLayout>


</LinearLayout>